First steps with layouts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>Tailwind Tutorial</title>
     <link href="/src/css/tailwind.css" rel="stylesheet" />
 </head>
-<body>
-    <h1 class="text-4xl">Tailwind css Tutorial</h1>
+<body class="bg-gray-200">
+    <div class="sm:p-10 p-5 sm:space-y-10 space-y-5">
+        <div class="lg:p-20 sm:p-12 p-7 bg-gray-50 rounded-lg shadow-md">
+            <h1 class="text-4xl mb-5 font-bold text-gray-800">Tailwind css Tutorial</h1>
+            <p class="text-gray-600">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat consequatur, nemo mollitia amet voluptate a quo molestias minus provident est impedit voluptatibus ut aut rem, voluptatem nisi deleniti? Magnam, error!</p>
+        
+            <h2 class="mt-5 mb-2 text-xl font-bold text-gray-700">Some second Headline</h2>
+            <p class="text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus necessitatibus incidunt delectus assumenda laudantium, ad doloribus debitis modi quia non dolorum sint quas repellendus saepe nesciunt minus sit earum ratione.</p>
+        </div>
+
+        <div class="lg:p-20 sm:p-12 p-7 bg-gray-50 rounded-lg shadow-md">
+            <h1 class="text-4xl mb-5 font-bold text-gray-800">Tailwind css Tutorial</h1>
+            <p class="text-gray-600">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat consequatur, nemo mollitia amet voluptate a quo molestias minus provident est impedit voluptatibus ut aut rem, voluptatem nisi deleniti? Magnam, error!</p>
+        
+            <h2 class="mt-5 mb-2 text-xl font-bold text-gray-700">Some second Headline</h2>
+            <p class="text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus necessitatibus incidunt delectus assumenda laudantium, ad doloribus debitis modi quia non dolorum sint quas repellendus saepe nesciunt minus sit earum ratione.</p>
+        </div>        
+    </div>
+
+
+
 </body>
 </html>
