First steps with layouts

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="/src/css/tailwind.css" rel="stylesheet" />
 </head>
 <body class="bg-gray-200">
-    <div class="sm:p-10 p-5 sm:space-y-10 space-y-5">
+    <div class="sm:p-10 p-5 sm:space-y-10 space-y-5 lg:max-w-4xl sm:max-w-2xl mx-auto">
         <div class="lg:p-20 sm:p-12 p-7 bg-gray-50 rounded-lg shadow-md">
             <h1 class="text-4xl mb-5 font-bold text-gray-800">Tailwind css Tutorial</h1>
             <p class="text-gray-600">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat consequatur, nemo mollitia amet voluptate a quo molestias minus provident est impedit voluptatibus ut aut rem, voluptatem nisi deleniti? Magnam, error!</p>
